# reasoning_model_with_speckit

./: .gitignore  CLAUDE.md  Makefile  PRD.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: test_plan.md
specs/: e2e-enhancement-plan.md
specs/001-thinking-unsloth-finetune-app/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-thinking-unsloth-finetune-app/checklists/: requirements.md
specs/001-thinking-unsloth-finetune-app/contracts/: trainer_api.md
src/: __init__.py  app.py  dataset_manager.py  inference.py  model_manager.py  trainer.py
tests/: conftest.py  test_dataset_manager.py  test_inference.py  test_model_manager.py  test_trainer.py
tests/e2e/: __init__.py  conftest.py  test_app.py  test_common.py  test_evaluate.py  test_inference.py  test_preparation.py  test_training.py
tests/unit/: __init__.py  test_dataset_manager.py  test_inference.py  test_model_manager.py  test_trainer.py
